--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -2,6 +2,7 @@
 
 .shows {
     padding: 2vw 5.6vw;
+    min-height: 50vh;
 
     &__list {
         display: none;
@@ -17,9 +18,7 @@
             img {
                 max-width: 100%;
                 border-radius: 4px;
-
             }
-
         }
     }
     &__tabs {
