--- a/src/styles/available-devices.scss
+++ b/src/styles/available-devices.scss
@@ -25,7 +25,7 @@
             }
 
             img {
-                width: 100%;            
+                max-width: 100%;            
             }
         }
     }
