--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,6 @@
 $backGroundColor: #040714;
 $primaryTextColor: silver;
 $secondaryTextColor: #f9f9f9;
+$backGroundColorPrimaryButton: #6421ff;
+$backGroundColorSecondaryButton: #0063e5;
+$backGroundColorDarkButton: #000;
