--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -10,6 +10,10 @@
         gap: 24px;
         margin-top: 44px;
 
+        @media (max-width: 768px) {
+            grid-template-columns: 1fr 1fr;
+        }
+
         &--is-active {
             display: grid;
         }
@@ -21,9 +25,17 @@
             }
         }
     }
+
     &__tabs {
         display: flex;
         justify-content: center;
+
+        @media (max-width: 768px) {
+            white-space: nowrap;
+            overflow-x: scroll;
+            padding-left: 20px;
+        }
+
         &__button {
             color: variables.$secondaryTextColor;
             font-size: 20px;
@@ -38,7 +50,9 @@
             &--is-active {
                 border-color: variables.$secondaryTextColor;
             }
-
+            @media (max-width: 768px) {
+                font-size: 16px;
+            }
         }
     }
 }
