changing imgs and faq

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
-$backGroundColor: #040714;
+$backGroundColor: #01030e;
 $primaryTextColor: silver;
-$secondaryTextColor: #f9f9f9;
-$backGroundColorPrimaryButton: #6421ff;
-$backGroundColorSecondaryButton: #0063e5;
+$secondaryTextColor: #ffc107;
+$backGroundColorPrimaryButton: #1648cf;
+$backGroundColorSecondaryButton: #494949;
 $backGroundColorDarkButton: #000;
